# fast-cli

./: pyproject.toml  readme.md
fast/: __main__.py  api.py  async_buffer.py  cli.py  speedtest.py  utils.py
