[tool.poetry]
name = "fast-cli"
version = "0.3.0"
description = "Fastest and highly accurate internet speed testing client."
authors = ["justfoolingaround <kr.justfoolingaround@gmail.com>"]
packages = [{ include = "fast" }, { include = "fast/**/*.py" }]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.8.3"
yarl = "^1.8.2"
humanize = "^4.5.0"
click = "^8.1.3"
rich = "^13.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fast-cli = "fast.__main__:__fastcom_speedtesting__"
